Made pollutant param optional for GetPollutionDensityOfRect
