# backend/docs/swagger.json
@@ -122,6 +122,12 @@
                         "name": "to",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Pollutant",
+                        "name": "pollutant",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -259,8 +265,7 @@
                         "type": "string",
                         "description": "pollutant",
                         "name": "pollutant",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
